--- a/app/src/main/res/layout/activity_replay.xml
+++ b/app/src/main/res/layout/activity_replay.xml
@@ -5,7 +5,7 @@
               android:layout_height="match_parent"
               android:gravity="center_horizontal|center_vertical"
               android:orientation="vertical"
-              tools:context=".PreBoardActivity">
+              tools:context=".GameSelectionActivity">
 
 
     <TextView
