--- a/app/src/main/res/layout/activity_module_selection.xml
+++ b/app/src/main/res/layout/activity_module_selection.xml
@@ -11,14 +11,14 @@
 
     <TextView
             android:paddingTop="40dp"
-            android:paddingBottom="20dp"
+            android:paddingBottom="30dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0"
             android:labelFor="@id/boardList"
             android:gravity="center_horizontal|center_vertical"
-            android:textSize="20sp"
-            android:text="Selecionar Módulo:"
+            android:textSize="24sp"
+            android:text="Selecione um módulo:"
             android:textStyle="bold"
     />
 
