--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -31,7 +31,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="status"
-                android:textSize="20sp"
+                android:textSize="16sp"
                 android:layout_weight="0"
         />
     </LinearLayout>
@@ -84,20 +84,25 @@
         >
             <Button
                     android:id="@+id/playReplay"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="100"
+                    android:layout_height="60dp"
                     android:textSize="16sp"
                     android:contentDescription="Replay"
                     android:text="Replay"
+                    android:layout_marginLeft="30dp"
                     android:layout_marginRight="20dp"
                     android:visibility="gone"
             />
 
             <Button
                     android:id="@+id/saveReplay"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="100"
+                    android:layout_height="60dp"
                     android:textSize="16sp"
+                    android:layout_marginRight="30dp"
+
                     android:contentDescription=" Salvar "
                     android:text="Salvar"
                     android:visibility="gone"
