--- a/app/src/main/res/layout/activity_replay.xml
+++ b/app/src/main/res/layout/activity_replay.xml
@@ -18,8 +18,8 @@
             android:labelFor="@id/replayList"
             android:gravity="center_horizontal|center_vertical"
             android:layout_marginBottom="5dp"
-            android:textSize="20sp"
-            android:text="Selecionar Replay:"
+            android:textSize="24sp"
+            android:text="Selecione um replay:"
             android:textStyle="bold"
     />
 
@@ -63,7 +63,7 @@
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingVertical="8dp"
+                android:paddingVertical="5dp"
                 android:gravity="center_horizontal|center_vertical"
                 android:orientation="horizontal"
         >
@@ -72,7 +72,7 @@
                     android:id="@+id/play"
                     android:layout_width="0dp"
                     android:layout_weight="50"
-                    android:layout_height="wrap_content"
+                    android:layout_height="70dp"
                     android:text="Ver"
                     android:textSize="20sp"
                     android:layout_marginRight="15dp"
@@ -81,7 +81,7 @@
                     android:id="@+id/delete"
                     android:layout_width="0dp"
                     android:layout_weight="50"
-                    android:layout_height="wrap_content"
+                    android:layout_height="70dp"
                     android:text="Deletar"
                     android:textSize="20sp"
             />
@@ -90,7 +90,7 @@
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingBottom="8dp"
+                android:paddingBottom="5dp"
                 android:gravity="center_horizontal|center_vertical"
                 android:orientation="horizontal"
         >
@@ -99,7 +99,7 @@
                     android:id="@+id/export"
                     android:layout_width="0dp"
                     android:layout_weight="50"
-                    android:layout_height="wrap_content"
+                    android:layout_height="70dp"
                     android:text="Baixar"
                     android:textSize="20sp"
                     android:layout_marginRight="15dp"
@@ -109,7 +109,7 @@
                     android:id="@+id/importReplay"
                     android:layout_width="0dp"
                     android:layout_weight="50"
-                    android:layout_height="wrap_content"
+                    android:layout_height="70dp"
                     android:text="Importar"
                     android:textSize="20sp"
 
@@ -124,7 +124,7 @@
         <Button
                 android:id="@+id/back"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:text="Voltar ao menu"
                 android:textSize="20sp"
         />
