--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,96 +1,143 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center_horizontal|center_vertical"
-    android:orientation="vertical"
-    tools:context=".SettingsActivity">
+             xmlns:app="http://schemas.android.com/apk/res-auto"
+             xmlns:tools="http://schemas.android.com/tools"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:orientation="vertical"
+
+             tools:context=".SettingsActivity">
 
     <TextView
-        android:id="@+id/settingsTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
-        android:gravity="center"
-        android:text="Configurações"
-        android:textSize="34sp" />
-
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="10dp"
-        android:gravity="center">
-
-        <TextView
-            android:id="@+id/colorChooser1Label"
-            android:layout_width="wrap_content"
+            android:paddingTop="40dp"
+            android:paddingBottom="20dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:labelFor="@id/colorChooser1"
-            android:text="Cor do jogador 1"
-            android:textSize="20sp" />
+            android:layout_weight="0"
+            android:labelFor="@id/boardList"
+            android:gravity="center_horizontal|center_vertical"
+            android:textSize="24sp"
+            android:text="Configurações gerais:"
+            android:textStyle="bold"
+    />
 
-        <Spinner
-            android:id="@+id/colorChooser1"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:minHeight="48dp" />
-    </TableRow>
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="100"
+            android:orientation="vertical"
+            android:paddingHorizontal="30dp"
+            android:gravity="center_vertical"
+    >
 
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="10dp"
-        android:gravity="center">
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:orientation="horizontal"
+        >
 
-        <TextView
-            android:id="@+id/colorChooser2Label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:labelFor="@id/colorChooser2"
-            android:text="Cor do jogador 2"
-            android:textSize="20sp" />
+            <TextView
+                    android:id="@+id/colorChooser1Label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:labelFor="@id/colorChooser2"
+                    android:text="Cor do jogador 1"
+                    android:textSize="20sp"
 
-        <Spinner
-            android:id="@+id/colorChooser2"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:minHeight="48dp" />
-    </TableRow>
+            />
 
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="30dp"
-        android:gravity="center">
+            <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="100"
+                    android:layout_height="0dp"
 
-        <TextView
-            android:id="@+id/colorChooser3Label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:labelFor="@id/colorChooser3"
-            android:text="Cor do cursor"
-            android:textSize="20sp" />
+            />
+            <Spinner
+                    android:id="@+id/colorChooser1"
+                    android:layout_width="80dp"
+                    android:layout_height="wrap_content"
+                    android:minHeight="48dp"
+                    android:gravity=""
 
-        <Spinner
-            android:id="@+id/colorChooser3"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:minHeight="48dp" />
-    </TableRow>
+            />
+        </LinearLayout>
 
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center">
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:orientation="horizontal"
+                >
 
-        <Button
+            <TextView
+                    android:id="@+id/colorChooser2Label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:labelFor="@id/colorChooser2"
+                    android:text="Cor do jogador 2"
+                    android:textSize="20sp"
+
+            />
+
+            <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="100"
+                    android:layout_height="0dp"
+
+            />
+            <Spinner
+                    android:id="@+id/colorChooser2"
+                    android:layout_width="80dp"
+                    android:layout_height="wrap_content"
+                    android:minHeight="48dp"
+                    android:gravity=""
+
+            />
+        </LinearLayout>
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:orientation="horizontal"
+        >
+
+            <TextView
+                    android:id="@+id/colorChooser3Label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:labelFor="@id/colorChooser2"
+                    android:text="Cor do cursor"
+                    android:textSize="20sp"
+
+            />
+
+            <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="100"
+                    android:layout_height="0dp"
+
+            />
+            <Spinner
+                    android:id="@+id/colorChooser3"
+                    android:layout_width="80dp"
+                    android:layout_height="wrap_content"
+                    android:minHeight="48dp"
+                    android:gravity=""
+
+            />
+        </LinearLayout>
+    </LinearLayout>
+
+
+    <Button
             android:id="@+id/save"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
             android:text="Salvar e voltar"
-            android:textSize="20sp" />
-    </TableRow>
+            android:textSize="20sp"
+            android:layout_margin="30dp"
+    />
 
 </TableLayout>
