fix: some things

--- a/app/src/main/res/layout/activity_game_selection.xml
+++ b/app/src/main/res/layout/activity_game_selection.xml
@@ -9,7 +9,7 @@
 
 
     <TextView
-            android:id="@+id/boardListLabel"
+            android:id="@+id/gameListLabel"
             android:paddingTop="40dp"
             android:paddingBottom="10dp"
             android:layout_width="match_parent"
